fix: background contrast tweaks

--- a/style.css
+++ b/style.css
@@ -353,7 +353,8 @@ html, body {
   position: absolute;
   inset: 0;
   border-radius: 5px;
-  box-shadow: 0 -6px 0px 0px rgba(27, 15, 55, 0.39) inset;
+  box-shadow: 0 -6px 0px 0px rgba(0, 0, 0, 0.39) inset;
+  outline: 2px solid #ffffff7d;
   pointer-events: none;
 }
 
